--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "toneflix-code/cuttly-laravel",
     "description": "A Laravel API wrapper for Cutt.ly API.",
+    "version": "1.0.0",
     "keywords": [
         "toneflix-code",
         "cuttly-laravel"
