--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/support": "~5.8.0|^6.0|^7.0|^8.0|^9.0"
+        "illuminate/support": "^8.0|^9.0",
+        "guzzlehttp/guzzle": "^7.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
