Move Facade to Facade dir. and modify imports. Updated README.md

--- a/composer.json
+++ b/composer.json
@@ -75,7 +75,7 @@
         "ToneflixCode\\Cuttly\\CuttlyServiceProvider"
       ],
       "aliases": {
-        "Cuttly": "ToneflixCode\\Cuttly\\Facades\\CuttlyFacade"
+        "Cuttly": "ToneflixCode\\Cuttly\\Facades\\Cuttly"
       }
     }
   }
