--- a/.github/workflows/run-tests-l10.yml
+++ b/.github/workflows/run-tests-l10.yml
@@ -1,10 +1,6 @@
-name: Run Tests
+name: Run Tests L10
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: workflow_dispatch
 
 jobs:
   test:
@@ -13,16 +9,13 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest]
-        php: [8.1, 8.2, 8.3]
-        laravel: [9.*, 10.*, 11.*]
+        php: [8.2, 8.3]
+        laravel: [10.*]
         stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 10.*
             testbench: 8.*
             php: 8.1
-          - laravel: 11.*
-            testbench: 9.*
-            php: 8.2
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
