--- a/.github/workflows/run-tests-l10.yml
+++ b/.github/workflows/run-tests-l10.yml
@@ -27,7 +27,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, bcmath, soap, intl, exif, fileinfo
+          extensions: dom, pdo, sqlite, pdo_sqlite, curl, libxml, mbstring, zip, pcntl, bcmath, soap, intl, exif, fileinfo
           coverage: xdebug
 
       - name: Setup problem matchers
