--- a/.github/workflows/run-tests-l11.yml
+++ b/.github/workflows/run-tests-l11.yml
@@ -69,5 +69,8 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./build/logs/clover.xml
-  call-run-tests-l10:
-    uses: ./.github/workflows/run-tests-l10.yml
+      call-run-tests-l10:
+        uses: ./.github/workflows/run-tests-l10.yml
+        secrets:
+          CUTTLY_API_KEY: ${{ secrets.CUTTLY_API_KEY }}
+          CUTTLY_TEAM_API_KEY: ${{ secrets.CUTTLY_TEAM_API_KEY }}
